# lau-morse-theory

./: AGENT.md  Cargo.toml  README.md
src/: agent_state.rs  critical_point.rs  gradient_flow.rs  handlebody.rs  lib.rs  manifold.rs  morse_function.rs  morse_inequalities.rs  morse_lemma.rs  morse_smale.rs  persistence.rs
